# ebpf-verifier-agent

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  bench_fixtures.py  bpfix.py  check_imports.py  pyproject.toml  requirements.txt  run_pytest.py  run_tests.py  syntax_check.py  test_imports.py
agent/: eval.py  metrics.py  oracle.py  repair_loop.py
benchmark/: collect.py  collect_github_issues.py  collect_kernel_selftests.py  collect_stackoverflow.py  collector_utils.py  reproduce.py  schema.yaml
bpfix-bench/: README.md  environment.yaml  manifest.yaml
case_study/: README.md  audit_verbose_logs.py  build_eval_manifest.py  build_kernel_selftests_verified.py  build_so_gh_verified.py  capture_kernel_selftests_verifier_logs.py  collect.py  collect_github_issues.py  collect_kernel_selftests.py  collect_rex_commits.py  collect_rex_commits_large_scale.py  collect_stackoverflow.py  collector_utils.py  eval_manifest.yaml  eval_schema.yaml  ground_truth.yaml  ground_truth_labels.yaml  ground_truth_v2.yaml  merge_localization_annotations.py  migrate_fresh_verifier_logs.py  migrate_to_eval_schema.py  reproduce.py  schema.yaml  verify_lowering_artifact_cases.py
core/: __init__.py
docs/: analysis-integration-todo.md  benchmark-corpus-design.md  benchmark-refactor-todo.md  local-llm-guide.md  paper-outline.md  research-plan.md  research-story-report.md
eval/: README.md  _run_v6.py  ablation_eval.py  baseline_eval.py  batch_diagnostic_eval.py  batch_proof_engine_eval.py  benchmark_loader.py  bpfix_eval_helpers.py  comparison_report.py  compile_synthetic_cases.py  (+24 more)
(+4620 files in other folders)
